baml-bridge/crates/bridge/tests/ui/unit_struct.rs
use baml_bridge::BamlType;

#[derive(BamlType)]
struct Bad;

fn main() {}
